Section five added

--- a/index.html
+++ b/index.html
@@ -516,6 +516,23 @@
     </section>
 
 
+    <!-- Section five -->
+
+    <section class="sec-5">
+        <div class="box">
+            <h1>The Cat API</h1>
+            <p>Images. Breeds. Facts.</p>
+            <div class="btn">
+                <div class="one">
+                    <p>GET YOUR API KEY</p>
+                </div>
+                <div class="two">
+                    <P>READ OUR GUIDES</P>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <div>
         <br><br><br><br><br><br><br><br>
