Footer Section added

--- a/index.html
+++ b/index.html
@@ -534,6 +534,40 @@
     </section>
 
 
+    <!-- Footer Section -->
+
+    <footer>
+        <div class="container">
+            <div class="one">
+                <img src="./image/footerLog.webp" alt="The api company logo">
+            </div>
+            <div class="two">
+                <h6>Details</h6>
+                <p>About Us</p>
+            </div>
+            <div class="three">
+                <h6>Community and Support</h6>
+                <p>Discord</p>
+                <p>Forum</p>
+            </div>
+            <div class="four">
+                <h6>Our other APIs</h6>
+                <p>The Auth API</p>
+                <p>The Report API</p>
+                <p>The Analytics API</p>
+                <p>The Image API</p>
+                <p>More APIs</p>
+            </div>
+            <div class="five">
+                <h6>Legals</h6>
+                <p>Terms & Conditions</p>
+                <p>Privacy Policy</p>
+            </div>
+        </div>
+    </footer>
+
+
+
     <div>
         <br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br>
