--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
     </nav>
 
-    <!-- Navbar responsive -->
+    <!-- Navbar responsive (small screen dropdown) -->
     <section class="drop">
         <div class="content">
             <p>PRICING</p>
